# pico_trials

./: .gitignore  CMakeLists.txt  README.md  TODO  devJournal
nodes/LedTesterNode/ledTesterSM/: CMakeLists.txt  ledTesterSM.c  ledTesterSM.h
nodes/LedTesterNode/ledTesterSM/nodeSWC/coldLedSM/: coldLedSM.c  coldLedSM.h
nodes/LedTesterNode/ledTesterSM/nodeSWC/controlLogicSM/: controlLogicSM.c  controlLogicSM.h
nodes/LedTesterNode/ledTesterSM/nodeSWC/encoderSM/: encoderSM.c  encoderSM.h
nodes/LedTesterNode/ledTesterSM/nodeSWC/pushButtonSM/: pushButtonSM.c  pushButtonSM.h
nodes/LedTesterNode/ledTesterSM/nodeSWC/warmLedSM/: warmLedSM.c  warmLedSM.h
nodes/LightController/lightController/: CMakeLists.txt  lightController.c  lightController.h  lightController_data.h
nodes/LightController/lightController/logicSM/: logicSM.c
nodes/LightController/lightController/nodeSWC/coldLedSM/: coldLedSM.c  coldLedSM.h
nodes/LightController/lightController/nodeSWC/controlLogic/: controlLogic.c  controlLogic.h
nodes/LightController/lightController/nodeSWC/rgbSM/: rgbSM.c  rgbSM.h
nodes/LightController/lightController/nodeSWC/warmLedSM/: warmLedSM.c  warmLedSM.h
nodes/LightController/lightControllerSM/: CMakeLists.txt  lightControllerSM.c  lightControllerSM.h
nodes/LightController/lightControllerSM/nodeSWC/coldLedSM/: coldLedSM.c  coldLedSM.h
nodes/LightController/lightControllerSM/nodeSWC/controlLogic/: controlLogic.c  controlLogic.h
nodes/LightController/lightControllerSM/nodeSWC/ledSM/: ledSM.c  ledSM.h
nodes/LightController/lightControllerSM/nodeSWC/rgbSM/: rgbSM.c  rgbSM.h
nodes/LightController/lightControllerSM/nodeSWC/warmLedSM/: warmLedSM.c  warmLedSM.h
nodes/LightSwitch/lightSwitchSM/: CMakeLists.txt  lightSwitchLogic.drawio  lightSwitchSM.c  lightSwitchSM.h  lightSwitch_data.h
nodes/LightSwitch/lightSwitchSM/nodeSWC/controlLogic/: controlLogic.c  (+2 more)
nodes/ObserverNode/ObserverSM/: CMakeLists.txt  ObserverSM.c  ObserverSM.h
nodes/RadiatorController/radiatorControllerSM/: CMakeLists.txt  radiatorControllerSM.c  radiatorControllerSM.h
nodes/WindowController/windowControllerSM/: CMakeLists.txt  windowControllerSM.c  windowControllerSM.h
picoOS/: CMakeLists.txt  OS.drawio  canDB.h  picoOS.c  picoOS.h  picoOS_Types.h  picoOS_config.h
picoOS/Comm/: CMakeLists.txt  Comm.c  Comm.h  Comms.h  commSM.c  commSM.h  osInternal_Messages.h.h  osMessages.h  osNetwork_Messages.h  osPortTypes.h
picoOS/Comm/CAN/: CAN_SM.c  CAN_SM.drawio  CAN_SM.h  CAN_SM_APIs.c  CAN_SM_APIs.h
picoOS/Comm/IPC/: ipc.c  ipc.h
picoOS/Comm/commSM/: commSM.c  commSM.h  commSM_functionality.c  commSM_functionality.h
picoOS/Comm/internal/: TODO  internal.h
picoOS/ErrorHandling/: CMakeLists.txt  ErrorHandling.c  ErrorHandling.h
picoOS/FlashControl/: CMakeLists.txt  FlashControl.c  FlashControl.h
picoOS/FreeRTOS/: CMakeLists.txt
picoOS/FreeRTOS/Scheduler/: Component_Documentation  Scheduler.c  Scheduler.h
picoOS/FreeRTOS/include/: FreeRTOSConfig.h  Scheduler_Config.h
picoOS/Hardware/: CMakeLists.txt  Hardware.c  Hardware.h
picoOS/Hardware/dma/: CMakeLists.txt  dma.c  dma.h  dma_configs.h
picoOS/Hardware/interrupts/: CMakeLists.txt  interrupts.c  interrupts.h
picoOS/Hardware/memory/: CMakeLists.txt
picoOS/Hardware/peripherals/: CMakeLists.txt  peripherals.h
picoOS/Hardware/peripherals/spi_drivers/: CMakeLists.txt  spi_drivers.c  spi_drivers.h
picoOS/Hardware/pio/: CMakeLists.txt  pio.h  pio_sm_costs.h
picoOS/Hardware/pio/can/: CMakeLists.txt  can2040.c  can2040.h  can2040.pio.h  can2040_api.c  can2040_api.h
picoOS/Hardware/pio/i2c/: CMakeLists.txt
picoOS/Hardware/pio/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.c  quadrature_encoder.pio  quadrature_encoder.pio.h
picoOS/Hardware/pio/spi/: CMakeLists.txt
picoOS/Hardware/pio/uart/: CMakeLists.txt
picoOS/Hardware/pio/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
picoOS/Hardware/sio/: CMakeLists.txt  sioHeaders.h
picoOS/Hardware/sio/core_fifo/: CMakeLists.txt  core_fifo.c  core_fifo.h
picoOS/Hardware/sio/divider/: CMakeLists.txt  divider.c  divider.h
picoOS/Hardware/sio/gpio/: CMakeLists.txt  Component_Documentation.txt  gpio.c  gpio.h
picoOS/Hardware/sio/interp/: CMakeLists.txt  interpolators.c  interpolators.h
picoOS/Hardware/sio/spinlocks/: CMakeLists.txt  spinlocks.c  spinlocks.h
picoOS/InterruptHandling/: CMakeLists.txt  interruptHandler.c  interruptHandler.h
picoOS/PinControl/: CMakeLists.txt  PinControl.c  PinControl.h
picoOS/PinControl/ADC/: adc.c  adc.h
picoOS/PinControl/GPIO/: gpio.c
picoOS/PinControl/PWM/: pwm.c  pwm.h  pwnTemplates.h
picoOS/Scheduler/: CMakeLists.txt  Scheduler.c  Scheduler.h
picoOS/SystemServices/: CMakeLists.txt
picoOS/SystemServices/ErrorHandling/: ErrorCodes.h  ErrorHandling.c  ErrorHandling.h
picoOS/SystemServices/Logging/: Logging.c  Logging.h
picoOS/SystemServices/Timers/: CMakeLists.txt  Timers.c  Timers.h
picoOS/SystemServices/Watchdog/: CMakeLists.txt  Watchdog.c
picoOS/Templates/: CMakeLists.txt  Templates.h
picoOS/Templates/LEDcontrol/: LEDcontrol.c
picoOS/Templates/PushButtonSM/: CMakeLists.txt  PushButtonSM.c  PushButtonSM.h
picoOS/Templates/QuadratureEncoderSM/: CMakeLists.txt  QuadratureEncoderSM.c  QuadratureEncoderSM.h
picoOS/Templates/RGBws2812SM/: RGB_SM.drawio  RGBws2812SM_Types.h  RGBws2812_Internal.c  RGBws2812_Internal.h  RGBws2812_SM.c  RGBws2812_SM.h  osRequirements.h
picoOS/Templates/fetControl/: CMakeLists.txt  Design Choices  fetControl.c  fetControl.h
picoOS/Templates/mosfetControl/: CMakeLists.txt  mosfetControl.c  mosfetControl.h
picoOS/Templates/servoControl/: CMakeLists.txt  servoControl.c  servoControl.h
picoOS/Timers/: CMakeLists.txt  Timers.c  Timers.h
picoOS/Watchdog/: Watchdog.c  Watchdog.h
picoOS/nodeSMs/LightController/: LightController_Node.c
picoOS/nodeSMs/LightController/coldWhiteSM/: coldWhiteSM.c  coldWhiteSM.h
picoOS/nodeSMs/LightController/rgbSM/: rgbSM.c
picoOS/nodeSMs/LightController/warmWhiteSM/: warmWhiteSM.c
picoOS/nodeSMs/LightSwitch/EncoderSM/: EncoderSM.h
(+114 files in other folders)
